--- a/templates/Map1.html
+++ b/templates/Map1.html
@@ -25,7 +25,7 @@
             <meta name="viewport" content="width=device-width,
                 initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
             <style>
-                #map_3e22f0c6f859b412dad2fa7eb716cf7c {
+                #map_e4a098ec222a9b64bfb965c92e227607 {
                     position: relative;
                     width: 100.0%;
                     height: 100.0%;
@@ -39,14 +39,14 @@
 <body>
     
     
-            <div class="folium-map" id="map_3e22f0c6f859b412dad2fa7eb716cf7c" ></div>
+            <div class="folium-map" id="map_e4a098ec222a9b64bfb965c92e227607" ></div>
         
 </body>
 <script>
     
     
-            var map_3e22f0c6f859b412dad2fa7eb716cf7c = L.map(
-                "map_3e22f0c6f859b412dad2fa7eb716cf7c",
+            var map_e4a098ec222a9b64bfb965c92e227607 = L.map(
+                "map_e4a098ec222a9b64bfb965c92e227607",
                 {
                     center: [23.57720301030994, 87.23297952732543],
                     crs: L.CRS.EPSG3857,
@@ -60,147 +60,147 @@
 
         
     
-            var tile_layer_264e179190bc4be192161c398acfce4a = L.tileLayer(
+            var tile_layer_bd52e3994f205e17b2998949b337e85d = L.tileLayer(
                 "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
                 {"attribution": "Data by \u0026copy; \u003ca target=\"_blank\" href=\"http://openstreetmap.org\"\u003eOpenStreetMap\u003c/a\u003e, under \u003ca target=\"_blank\" href=\"http://www.openstreetmap.org/copyright\"\u003eODbL\u003c/a\u003e.", "detectRetina": false, "maxNativeZoom": 18, "maxZoom": 18, "minZoom": 0, "noWrap": false, "opacity": 1, "subdomains": "abc", "tms": false}
-            ).addTo(map_3e22f0c6f859b412dad2fa7eb716cf7c);
+            ).addTo(map_e4a098ec222a9b64bfb965c92e227607);
         
     
-            var feature_group_d6f1d04295b250194c3ab66f4ba0ad91 = L.featureGroup(
+            var feature_group_18875f7084199a806c7a872610ebf3ca = L.featureGroup(
                 {}
-            ).addTo(map_3e22f0c6f859b412dad2fa7eb716cf7c);
+            ).addTo(map_e4a098ec222a9b64bfb965c92e227607);
         
     
-            var marker_7cc315672a621bf4b10869fa2a762b01 = L.marker(
+            var marker_9b38be47463a85ebe6acc2334709903c = L.marker(
                 [23.57720301030994, 87.23297952732543],
                 {}
-            ).addTo(feature_group_d6f1d04295b250194c3ab66f4ba0ad91);
+            ).addTo(feature_group_18875f7084199a806c7a872610ebf3ca);
         
     
-            var icon_237f9fcf6d7ef0fcef062b411a93207f = L.AwesomeMarkers.icon(
+            var icon_2c640b93e9ded2f0db51a705c3789e7f = L.AwesomeMarkers.icon(
                 {"extraClasses": "fa-rotate-0", "icon": "home", "iconColor": "white", "markerColor": "blue", "prefix": "fa"}
             );
-            marker_7cc315672a621bf4b10869fa2a762b01.setIcon(icon_237f9fcf6d7ef0fcef062b411a93207f);
+            marker_9b38be47463a85ebe6acc2334709903c.setIcon(icon_2c640b93e9ded2f0db51a705c3789e7f);
         
     
-        var popup_ff5bd77106b8ef7affb7f16d33ec54ce = L.popup({"maxWidth": "100%"});
+        var popup_542dea8bf6d010d7b4c9df24f8d32eb9 = L.popup({"maxWidth": "100%"});
 
         
             
-                var html_c4607e1511352d5bef5ddbefaaaca073 = $(`<div id="html_c4607e1511352d5bef5ddbefaaaca073" style="width: 100.0%; height: 100.0%;"><h4><b>Home<b></h4></div>`)[0];
-                popup_ff5bd77106b8ef7affb7f16d33ec54ce.setContent(html_c4607e1511352d5bef5ddbefaaaca073);
+                var html_3b788ae903fdc187a941efd30f1cb8ba = $(`<div id="html_3b788ae903fdc187a941efd30f1cb8ba" style="width: 100.0%; height: 100.0%;"><h4><b>Home<b></h4></div>`)[0];
+                popup_542dea8bf6d010d7b4c9df24f8d32eb9.setContent(html_3b788ae903fdc187a941efd30f1cb8ba);
             
         
 
-        marker_7cc315672a621bf4b10869fa2a762b01.bindPopup(popup_ff5bd77106b8ef7affb7f16d33ec54ce)
+        marker_9b38be47463a85ebe6acc2334709903c.bindPopup(popup_542dea8bf6d010d7b4c9df24f8d32eb9)
         ;
 
         
     
     
-            var marker_b1bb2c9ea58df661eaef240725c13041 = L.marker(
-                [23.577561746706873, 87.2302466159209],
+            var marker_fbada2e35b3613f605c37e7ebda94101 = L.marker(
+                [23.57479615853802, 87.23219233416339],
                 {}
-            ).addTo(feature_group_d6f1d04295b250194c3ab66f4ba0ad91);
+            ).addTo(feature_group_18875f7084199a806c7a872610ebf3ca);
         
     
-            var icon_e22ca8d45eada6b51d18017a66689b89 = L.AwesomeMarkers.icon(
+            var icon_1e133f149afddc9bb8913c2cc35b86ad = L.AwesomeMarkers.icon(
                 {"extraClasses": "fa-rotate-0", "icon": "shopping-cart", "iconColor": "white", "markerColor": "green", "prefix": "fa"}
             );
-            marker_b1bb2c9ea58df661eaef240725c13041.setIcon(icon_e22ca8d45eada6b51d18017a66689b89);
+            marker_fbada2e35b3613f605c37e7ebda94101.setIcon(icon_1e133f149afddc9bb8913c2cc35b86ad);
         
     
-        var popup_f1f4a074580a6deaaf22fc443ed68ca3 = L.popup({"maxWidth": 300});
+        var popup_ca43597360b39bba940b4a2fe75ff488 = L.popup({"maxWidth": 300});
 
         
             
-                var html_8bba7247ad0cff8e81691fcb11b60553 = $(`<div id="html_8bba7247ad0cff8e81691fcb11b60553" style="width: 100.0%; height: 100.0%;"><h3><b>Paul General Store</b></h3><br><b>Product Name:</b> Desidiya Warm White Diya/Diwali Light Curtain, Led String Lights with Pack of 12 Hanging Diyas, 8 Flashing Modes, Decoration, Prong Base<br><b>Price:</b> 300</div>`)[0];
-                popup_f1f4a074580a6deaaf22fc443ed68ca3.setContent(html_8bba7247ad0cff8e81691fcb11b60553);
+                var html_29641c5c6a30beb060564ea65f83d899 = $(`<div id="html_29641c5c6a30beb060564ea65f83d899" style="width: 100.0%; height: 100.0%;"><h3><b>Kanchan Watch</b></h3><br><b>Product Name:</b> Casio G-Shock Analog-Digital Black Dial Men GM-B2100D-1ADR (G1270)<br><b>Price:</b> 25000</div>`)[0];
+                popup_ca43597360b39bba940b4a2fe75ff488.setContent(html_29641c5c6a30beb060564ea65f83d899);
             
         
 
-        marker_b1bb2c9ea58df661eaef240725c13041.bindPopup(popup_f1f4a074580a6deaaf22fc443ed68ca3)
+        marker_fbada2e35b3613f605c37e7ebda94101.bindPopup(popup_ca43597360b39bba940b4a2fe75ff488)
         ;
 
         
     
     
-            var marker_1685b580ae254b52f1e01f023bb04e5d = L.marker(
-                [23.576702257257583, 87.23095472976954],
+            var marker_2b66a508d2d2445d875876342009d48f = L.marker(
+                [23.576228658612298, 87.23131197640271],
                 {}
-            ).addTo(feature_group_d6f1d04295b250194c3ab66f4ba0ad91);
+            ).addTo(feature_group_18875f7084199a806c7a872610ebf3ca);
         
     
-            var icon_7063e7e604c82c9a3888f47e9b6cbb1a = L.AwesomeMarkers.icon(
+            var icon_649a0ac582c6bd7ada3e10320bfdfef0 = L.AwesomeMarkers.icon(
                 {"extraClasses": "fa-rotate-0", "icon": "shopping-cart", "iconColor": "white", "markerColor": "red", "prefix": "fa"}
             );
-            marker_1685b580ae254b52f1e01f023bb04e5d.setIcon(icon_7063e7e604c82c9a3888f47e9b6cbb1a);
+            marker_2b66a508d2d2445d875876342009d48f.setIcon(icon_649a0ac582c6bd7ada3e10320bfdfef0);
         
     
-        var popup_ac2353cf6d47eb12f91648cabe18ecdb = L.popup({"maxWidth": 300});
+        var popup_689b5392e94b2fc6dbd2d568b3804071 = L.popup({"maxWidth": 300});
 
         
             
-                var html_81a5d46eb517a52e8414d7a448b86147 = $(`<div id="html_81a5d46eb517a52e8414d7a448b86147" style="width: 100.0%; height: 100.0%;"><h3><b>Malakar Gift Shop</b></h3><br><b>Product Name:</b> Desidiya Warm White Diya/Diwali Light Curtain, Led String Lights with Pack of 12 Hanging Diyas, 8 Flashing Modes, Decoration, Prong Base<br><b>Price:</b> 400</div>`)[0];
-                popup_ac2353cf6d47eb12f91648cabe18ecdb.setContent(html_81a5d46eb517a52e8414d7a448b86147);
+                var html_2d76e865d42db5a7d4969865398ca4de = $(`<div id="html_2d76e865d42db5a7d4969865398ca4de" style="width: 100.0%; height: 100.0%;"><h3><b>City Watch Co.</b></h3><br><b>Product Name:</b> Casio G-Shock Analog-Digital Black Dial Men GM-B2100D-1ADR (G1270)<br><b>Price:</b> 27000</div>`)[0];
+                popup_689b5392e94b2fc6dbd2d568b3804071.setContent(html_2d76e865d42db5a7d4969865398ca4de);
             
         
 
-        marker_1685b580ae254b52f1e01f023bb04e5d.bindPopup(popup_ac2353cf6d47eb12f91648cabe18ecdb)
+        marker_2b66a508d2d2445d875876342009d48f.bindPopup(popup_689b5392e94b2fc6dbd2d568b3804071)
         ;
 
         
     
     
-            var marker_379a6083bb85e5a5ead7a00b9877efa3 = L.marker(
-                [23.57624619935316, 87.23188612276037],
+            var marker_e5562dcb5ccb57cb3850af4912bd1b0e = L.marker(
+                [23.574410257889, 87.2329706214571],
                 {}
-            ).addTo(feature_group_d6f1d04295b250194c3ab66f4ba0ad91);
+            ).addTo(feature_group_18875f7084199a806c7a872610ebf3ca);
         
     
-            var icon_fa83e558c09f1b203de6a526d1e79ad5 = L.AwesomeMarkers.icon(
+            var icon_9baae56910a8ad114c43e50fb212587c = L.AwesomeMarkers.icon(
                 {"extraClasses": "fa-rotate-0", "icon": "shopping-cart", "iconColor": "white", "markerColor": "red", "prefix": "fa"}
             );
-            marker_379a6083bb85e5a5ead7a00b9877efa3.setIcon(icon_fa83e558c09f1b203de6a526d1e79ad5);
+            marker_e5562dcb5ccb57cb3850af4912bd1b0e.setIcon(icon_9baae56910a8ad114c43e50fb212587c);
         
     
-        var popup_b8316617fa971a57a0672eb99225a225 = L.popup({"maxWidth": 300});
+        var popup_3be3225de9c71f20c0296dad5ab62e20 = L.popup({"maxWidth": 300});
 
         
             
-                var html_47053c2d4638ea56af6502da34c02583 = $(`<div id="html_47053c2d4638ea56af6502da34c02583" style="width: 100.0%; height: 100.0%;"><h3><b>Netaji Ration Store</b></h3><br><b>Product Name:</b> Desidiya Warm White Diya/Diwali Light Curtain, Led String Lights with Pack of 12 Hanging Diyas, 8 Flashing Modes, Decoration, Prong Base<br><b>Price:</b> 400</div>`)[0];
-                popup_b8316617fa971a57a0672eb99225a225.setContent(html_47053c2d4638ea56af6502da34c02583);
+                var html_1e5faaba3656d44dc8046912895aadf6 = $(`<div id="html_1e5faaba3656d44dc8046912895aadf6" style="width: 100.0%; height: 100.0%;"><h3><b>Modern Watch Co.</b></h3><br><b>Product Name:</b> Casio G-Shock Analog-Digital Black Dial Men GM-B2100D-1ADR (G1270)<br><b>Price:</b> 30000</div>`)[0];
+                popup_3be3225de9c71f20c0296dad5ab62e20.setContent(html_1e5faaba3656d44dc8046912895aadf6);
             
         
 
-        marker_379a6083bb85e5a5ead7a00b9877efa3.bindPopup(popup_b8316617fa971a57a0672eb99225a225)
+        marker_e5562dcb5ccb57cb3850af4912bd1b0e.bindPopup(popup_3be3225de9c71f20c0296dad5ab62e20)
         ;
 
         
     
     
-            var marker_77e9e1ea6afd121cf4450b2c94c7d21f = L.marker(
-                [23.576795807401144, 87.23003609558677],
+            var marker_b46a273a29dba65ef8d2fbfda0e78273 = L.marker(
+                [23.575649813520005, 87.23266441006287],
                 {}
-            ).addTo(feature_group_d6f1d04295b250194c3ab66f4ba0ad91);
+            ).addTo(feature_group_18875f7084199a806c7a872610ebf3ca);
         
     
-            var icon_f83a689464bc8fa990a6aed1a231bfea = L.AwesomeMarkers.icon(
+            var icon_22d630fe419f0fea3ae1957bb0ed24a9 = L.AwesomeMarkers.icon(
                 {"extraClasses": "fa-rotate-0", "icon": "shopping-cart", "iconColor": "white", "markerColor": "red", "prefix": "fa"}
             );
-            marker_77e9e1ea6afd121cf4450b2c94c7d21f.setIcon(icon_f83a689464bc8fa990a6aed1a231bfea);
+            marker_b46a273a29dba65ef8d2fbfda0e78273.setIcon(icon_22d630fe419f0fea3ae1957bb0ed24a9);
         
     
-        var popup_c33f9f0e6263bd06006cfbbcdad86ed1 = L.popup({"maxWidth": 300});
+        var popup_d00ab94e4ad42af6ff813e795b55caa3 = L.popup({"maxWidth": 300});
 
         
             
-                var html_5adb70efd8a3a293ff10ece3aee77ea2 = $(`<div id="html_5adb70efd8a3a293ff10ece3aee77ea2" style="width: 100.0%; height: 100.0%;"><h3><b>R.K Electricals</b></h3><br><b>Product Name:</b> Desidiya Warm White Diya/Diwali Light Curtain, Led String Lights with Pack of 12 Hanging Diyas, 8 Flashing Modes, Decoration, Prong Base<br><b>Price:</b> 404</div>`)[0];
-                popup_c33f9f0e6263bd06006cfbbcdad86ed1.setContent(html_5adb70efd8a3a293ff10ece3aee77ea2);
+                var html_799a7e0156d61879d9cf13667ad5c2e4 = $(`<div id="html_799a7e0156d61879d9cf13667ad5c2e4" style="width: 100.0%; height: 100.0%;"><h3><b>Helios Watch store</b></h3><br><b>Product Name:</b> Casio G-Shock Analog-Digital Black Dial Men GM-B2100D-1ADR (G1270)<br><b>Price:</b> 30000</div>`)[0];
+                popup_d00ab94e4ad42af6ff813e795b55caa3.setContent(html_799a7e0156d61879d9cf13667ad5c2e4);
             
         
 
-        marker_77e9e1ea6afd121cf4450b2c94c7d21f.bindPopup(popup_c33f9f0e6263bd06006cfbbcdad86ed1)
+        marker_b46a273a29dba65ef8d2fbfda0e78273.bindPopup(popup_d00ab94e4ad42af6ff813e795b55caa3)
         ;
 
         
