--- a/templates/About.html
+++ b/templates/About.html
@@ -111,13 +111,13 @@
                 Meet our full-stack team—merging Indian vibrancy into every line of code. We code, design, and innovate to the rhythm of coffee, curated music, and boundless passion. 🚀☕🎵
             </p>
             <p class="sttech lazy">
-                <span class="stack">.frontend(): </span> .akash
+                <span class="stack">.frontend(): </span> .akash, .sajal
             </p>
             <p class="sttech lazy">
                 <span class="stack">.backend(): </span> .mrigank, .kunal
             </p>
             <p class="sttech lazy">
-                <span class="stack">.ppt(): </span> .kunal, .sajal, .akash
+                <span class="stack">.ppt(): </span> .sajal, .kunal 
             </p>
             <p class="sttech lazy">
                 <span class="stack">.report(): </span> .kunal, .rounak
