--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
         <a href="#" class="i">
           <i class="far fa-file fa-lg"></i>
         </a>
-        <a href="#" class="i">
+        <a href="https://github.com/mrigank590/LocalFetch" class="i">
           <i class="fab fa-github fa-lg"></i>
         </a>
       </div>
@@ -63,7 +63,7 @@
     <div class="right">
       <div class="welcome" id="upper-div">
         <h1 class="ltl">
-          localfetch<span class="local">.hub()</span>
+          LocalFetch<span class="local">.Hub()</span>
         </h1>
         <div class="">
           <form action="/map" class="searchBox boxsearch">
