--- a/templates/Map1.html
+++ b/templates/Map1.html
@@ -25,7 +25,7 @@
             <meta name="viewport" content="width=device-width,
                 initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
             <style>
-                #map_cd1a146d789204143d14cd61f8d64d42 {
+                #map_e9d9e885b739921decb75f8bc49c1158 {
                     position: relative;
                     width: 100.0%;
                     height: 100.0%;
@@ -39,14 +39,14 @@
 <body>
     
     
-            <div class="folium-map" id="map_cd1a146d789204143d14cd61f8d64d42" ></div>
+            <div class="folium-map" id="map_e9d9e885b739921decb75f8bc49c1158" ></div>
         
 </body>
 <script>
     
     
-            var map_cd1a146d789204143d14cd61f8d64d42 = L.map(
-                "map_cd1a146d789204143d14cd61f8d64d42",
+            var map_e9d9e885b739921decb75f8bc49c1158 = L.map(
+                "map_e9d9e885b739921decb75f8bc49c1158",
                 {
                     center: [23.57720301030994, 87.23297952732543],
                     crs: L.CRS.EPSG3857,
@@ -60,147 +60,147 @@
 
         
     
-            var tile_layer_6cc077a456c439e9d6d030989a013c19 = L.tileLayer(
+            var tile_layer_9e907b5ab05887d1e190b477924e4842 = L.tileLayer(
                 "https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
                 {"attribution": "Data by \u0026copy; \u003ca target=\"_blank\" href=\"http://openstreetmap.org\"\u003eOpenStreetMap\u003c/a\u003e, under \u003ca target=\"_blank\" href=\"http://www.openstreetmap.org/copyright\"\u003eODbL\u003c/a\u003e.", "detectRetina": false, "maxNativeZoom": 18, "maxZoom": 18, "minZoom": 0, "noWrap": false, "opacity": 1, "subdomains": "abc", "tms": false}
-            ).addTo(map_cd1a146d789204143d14cd61f8d64d42);
+            ).addTo(map_e9d9e885b739921decb75f8bc49c1158);
         
     
-            var feature_group_af39997c50aefc1474337bb75e871507 = L.featureGroup(
+            var feature_group_4eadeb088e9f78c398f0c99a13224a33 = L.featureGroup(
                 {}
-            ).addTo(map_cd1a146d789204143d14cd61f8d64d42);
+            ).addTo(map_e9d9e885b739921decb75f8bc49c1158);
         
     
-            var marker_008202f707519b430382dd19cc032e31 = L.marker(
+            var marker_f295426971150c7a8df3c9bdeef56b0d = L.marker(
                 [23.57720301030994, 87.23297952732543],
                 {}
-            ).addTo(feature_group_af39997c50aefc1474337bb75e871507);
+            ).addTo(feature_group_4eadeb088e9f78c398f0c99a13224a33);
         
     
-            var icon_a42a0010a287d46db43b7f87974df6cb = L.AwesomeMarkers.icon(
+            var icon_1e40d6039810ca91399ef233eef72bf7 = L.AwesomeMarkers.icon(
                 {"extraClasses": "fa-rotate-0", "icon": "home", "iconColor": "white", "markerColor": "blue", "prefix": "fa"}
             );
-            marker_008202f707519b430382dd19cc032e31.setIcon(icon_a42a0010a287d46db43b7f87974df6cb);
+            marker_f295426971150c7a8df3c9bdeef56b0d.setIcon(icon_1e40d6039810ca91399ef233eef72bf7);
         
     
-        var popup_f5b63c16c871aa4e2fe988c1b7df61c5 = L.popup({"maxWidth": "100%"});
+        var popup_00de03f32aa45bb2cd48a38d9898a115 = L.popup({"maxWidth": "100%"});
 
         
             
-                var html_cad7f611e8d70742d66f9d54ad8497a0 = $(`<div id="html_cad7f611e8d70742d66f9d54ad8497a0" style="width: 100.0%; height: 100.0%;"><h4><b>Home<b></h4></div>`)[0];
-                popup_f5b63c16c871aa4e2fe988c1b7df61c5.setContent(html_cad7f611e8d70742d66f9d54ad8497a0);
+                var html_66584b1b453709da3445007abfd713bb = $(`<div id="html_66584b1b453709da3445007abfd713bb" style="width: 100.0%; height: 100.0%;"><h4><b>Home<b></h4></div>`)[0];
+                popup_00de03f32aa45bb2cd48a38d9898a115.setContent(html_66584b1b453709da3445007abfd713bb);
             
         
 
-        marker_008202f707519b430382dd19cc032e31.bindPopup(popup_f5b63c16c871aa4e2fe988c1b7df61c5)
+        marker_f295426971150c7a8df3c9bdeef56b0d.bindPopup(popup_00de03f32aa45bb2cd48a38d9898a115)
         ;
 
         
     
     
-            var marker_bf6e7a1b6b5e031b743acbf4ee24fc0b = L.marker(
-                [23.57479615853802, 87.23219233416339],
+            var marker_d407e61eabfcdce7097df9d67e6d2f68 = L.marker(
+                [23.57497263693226, 87.23204313290005],
                 {}
-            ).addTo(feature_group_af39997c50aefc1474337bb75e871507);
+            ).addTo(feature_group_4eadeb088e9f78c398f0c99a13224a33);
         
     
-            var icon_44cf24baf679f7d3e3f9e55969dd2715 = L.AwesomeMarkers.icon(
+            var icon_2a318f45b1ae998614e500020ae4554e = L.AwesomeMarkers.icon(
                 {"extraClasses": "fa-rotate-0", "icon": "shopping-cart", "iconColor": "white", "markerColor": "green", "prefix": "fa"}
             );
-            marker_bf6e7a1b6b5e031b743acbf4ee24fc0b.setIcon(icon_44cf24baf679f7d3e3f9e55969dd2715);
+            marker_d407e61eabfcdce7097df9d67e6d2f68.setIcon(icon_2a318f45b1ae998614e500020ae4554e);
         
     
-        var popup_abb4942dc716f56bde9c6f42a6eba9b9 = L.popup({"maxWidth": 300});
+        var popup_d956ca045ba8619230a8c141477e3eda = L.popup({"maxWidth": 300});
 
         
             
-                var html_f1dedf707225ed9d8aff1e4f498681a8 = $(`<div id="html_f1dedf707225ed9d8aff1e4f498681a8" style="width: 100.0%; height: 100.0%;"><h3><b>Kanchan Watch</b></h3><br><b>Product Name:</b> Casio G-Shock Analog-Digital Black Dial Men GM-B2100D-1ADR (G1270)<br><b>Price:</b> 25000</div>`)[0];
-                popup_abb4942dc716f56bde9c6f42a6eba9b9.setContent(html_f1dedf707225ed9d8aff1e4f498681a8);
+                var html_54fd9855df8ac506df23457a00d9ff8e = $(`<div id="html_54fd9855df8ac506df23457a00d9ff8e" style="width: 100.0%; height: 100.0%;"><h3><b>The Mobile Gallery</b></h3><br><b>Product Name:</b> Samsung Galaxy M34 5G (Prism Silver,8GB,256GB), 120Hz sAMOLED Display, 50MP Triple No Shake Cam, 6000 mAh Battery<br><b>Price:</b> 16000</div>`)[0];
+                popup_d956ca045ba8619230a8c141477e3eda.setContent(html_54fd9855df8ac506df23457a00d9ff8e);
             
         
 
-        marker_bf6e7a1b6b5e031b743acbf4ee24fc0b.bindPopup(popup_abb4942dc716f56bde9c6f42a6eba9b9)
+        marker_d407e61eabfcdce7097df9d67e6d2f68.bindPopup(popup_d956ca045ba8619230a8c141477e3eda)
         ;
 
         
     
     
-            var marker_4def19fabc1ad37fc9ca74a7d486759d = L.marker(
-                [23.576228658612298, 87.23131197640271],
+            var marker_1832e85e1f2d4dd3b9dc8afc4fb70687 = L.marker(
+                [23.57515973962461, 87.23263003807743],
                 {}
-            ).addTo(feature_group_af39997c50aefc1474337bb75e871507);
+            ).addTo(feature_group_4eadeb088e9f78c398f0c99a13224a33);
         
     
-            var icon_7fbd7128176b13c2ce2de842d767b3aa = L.AwesomeMarkers.icon(
+            var icon_89dc51649fb7a3d183c169162522825e = L.AwesomeMarkers.icon(
                 {"extraClasses": "fa-rotate-0", "icon": "shopping-cart", "iconColor": "white", "markerColor": "red", "prefix": "fa"}
             );
-            marker_4def19fabc1ad37fc9ca74a7d486759d.setIcon(icon_7fbd7128176b13c2ce2de842d767b3aa);
+            marker_1832e85e1f2d4dd3b9dc8afc4fb70687.setIcon(icon_89dc51649fb7a3d183c169162522825e);
         
     
-        var popup_9471a2bf6182ed22da6ca8ce61f1d505 = L.popup({"maxWidth": 300});
+        var popup_89c2ccb112d704b09778cca078d49936 = L.popup({"maxWidth": 300});
 
         
             
-                var html_1c32ab456ef238beb6e73fc0fb85a91e = $(`<div id="html_1c32ab456ef238beb6e73fc0fb85a91e" style="width: 100.0%; height: 100.0%;"><h3><b>City Watch Co.</b></h3><br><b>Product Name:</b> Casio G-Shock Analog-Digital Black Dial Men GM-B2100D-1ADR (G1270)<br><b>Price:</b> 27000</div>`)[0];
-                popup_9471a2bf6182ed22da6ca8ce61f1d505.setContent(html_1c32ab456ef238beb6e73fc0fb85a91e);
+                var html_9247f5c705500665a42fff96057fac17 = $(`<div id="html_9247f5c705500665a42fff96057fac17" style="width: 100.0%; height: 100.0%;"><h3><b>Samsung Store</b></h3><br><b>Product Name:</b> Samsung Galaxy M34 5G (Prism Silver,8GB,256GB), 120Hz sAMOLED Display, 50MP Triple No Shake Cam, 6000 mAh Battery<br><b>Price:</b> 17000</div>`)[0];
+                popup_89c2ccb112d704b09778cca078d49936.setContent(html_9247f5c705500665a42fff96057fac17);
             
         
 
-        marker_4def19fabc1ad37fc9ca74a7d486759d.bindPopup(popup_9471a2bf6182ed22da6ca8ce61f1d505)
+        marker_1832e85e1f2d4dd3b9dc8afc4fb70687.bindPopup(popup_89c2ccb112d704b09778cca078d49936)
         ;
 
         
     
     
-            var marker_7afe6def57d2a7aba09ba245fd8df94c = L.marker(
-                [23.574410257889, 87.2329706214571],
+            var marker_0327237401d3c1c08ad774651dcf551c = L.marker(
+                [23.575785362286805, 87.22912774523824],
                 {}
-            ).addTo(feature_group_af39997c50aefc1474337bb75e871507);
+            ).addTo(feature_group_4eadeb088e9f78c398f0c99a13224a33);
         
     
-            var icon_5692a2e8c2be7f013ad62bb2120ed2dc = L.AwesomeMarkers.icon(
+            var icon_3ea9b11b50c1ab24dca006eb15783516 = L.AwesomeMarkers.icon(
                 {"extraClasses": "fa-rotate-0", "icon": "shopping-cart", "iconColor": "white", "markerColor": "red", "prefix": "fa"}
             );
-            marker_7afe6def57d2a7aba09ba245fd8df94c.setIcon(icon_5692a2e8c2be7f013ad62bb2120ed2dc);
+            marker_0327237401d3c1c08ad774651dcf551c.setIcon(icon_3ea9b11b50c1ab24dca006eb15783516);
         
     
-        var popup_71a7811ce6a05266d40c886d8e8a8e31 = L.popup({"maxWidth": 300});
+        var popup_f52fbaeb4eb5b82ccca1363bb7cd8a88 = L.popup({"maxWidth": 300});
 
         
             
-                var html_5f3b9db54b22edfca53ade1812781210 = $(`<div id="html_5f3b9db54b22edfca53ade1812781210" style="width: 100.0%; height: 100.0%;"><h3><b>Modern Watch Co.</b></h3><br><b>Product Name:</b> Casio G-Shock Analog-Digital Black Dial Men GM-B2100D-1ADR (G1270)<br><b>Price:</b> 30000</div>`)[0];
-                popup_71a7811ce6a05266d40c886d8e8a8e31.setContent(html_5f3b9db54b22edfca53ade1812781210);
+                var html_3f64e8c54e1b517124c633c27a79a209 = $(`<div id="html_3f64e8c54e1b517124c633c27a79a209" style="width: 100.0%; height: 100.0%;"><h3><b>Maa Telecom</b></h3><br><b>Product Name:</b> Samsung Galaxy M34 5G (Prism Silver,8GB,256GB), 120Hz sAMOLED Display, 50MP Triple No Shake Cam, 6000 mAh Battery<br><b>Price:</b> 19000</div>`)[0];
+                popup_f52fbaeb4eb5b82ccca1363bb7cd8a88.setContent(html_3f64e8c54e1b517124c633c27a79a209);
             
         
 
-        marker_7afe6def57d2a7aba09ba245fd8df94c.bindPopup(popup_71a7811ce6a05266d40c886d8e8a8e31)
+        marker_0327237401d3c1c08ad774651dcf551c.bindPopup(popup_f52fbaeb4eb5b82ccca1363bb7cd8a88)
         ;
 
         
     
     
-            var marker_0234e31c7db96d50c0cddb0c026b6ebc = L.marker(
-                [23.575649813520005, 87.23266441006287],
+            var marker_5a5ede0398606136aed712a157c642b0 = L.marker(
+                [23.575966616918183, 87.23137329546991],
                 {}
-            ).addTo(feature_group_af39997c50aefc1474337bb75e871507);
+            ).addTo(feature_group_4eadeb088e9f78c398f0c99a13224a33);
         
     
-            var icon_0a763e1569d063d8e4f3acb3fdcff08b = L.AwesomeMarkers.icon(
+            var icon_2c17b8cbc8745ccc4c6e4f9fcf9108d2 = L.AwesomeMarkers.icon(
                 {"extraClasses": "fa-rotate-0", "icon": "shopping-cart", "iconColor": "white", "markerColor": "red", "prefix": "fa"}
             );
-            marker_0234e31c7db96d50c0cddb0c026b6ebc.setIcon(icon_0a763e1569d063d8e4f3acb3fdcff08b);
+            marker_5a5ede0398606136aed712a157c642b0.setIcon(icon_2c17b8cbc8745ccc4c6e4f9fcf9108d2);
         
     
-        var popup_6270c36e11ba73a15174416879f74342 = L.popup({"maxWidth": 300});
+        var popup_99b2620fdb060349a5789d7ef2e948db = L.popup({"maxWidth": 300});
 
         
             
-                var html_a297a3dbfd36a05cd58febe64b166e9d = $(`<div id="html_a297a3dbfd36a05cd58febe64b166e9d" style="width: 100.0%; height: 100.0%;"><h3><b>Helios Watch store</b></h3><br><b>Product Name:</b> Casio G-Shock Analog-Digital Black Dial Men GM-B2100D-1ADR (G1270)<br><b>Price:</b> 30000</div>`)[0];
-                popup_6270c36e11ba73a15174416879f74342.setContent(html_a297a3dbfd36a05cd58febe64b166e9d);
+                var html_ed5a7bf770c29cd703bcb3228e7c41cc = $(`<div id="html_ed5a7bf770c29cd703bcb3228e7c41cc" style="width: 100.0%; height: 100.0%;"><h3><b>Prakash Digitals</b></h3><br><b>Product Name:</b> Samsung Galaxy M34 5G (Prism Silver,8GB,256GB), 120Hz sAMOLED Display, 50MP Triple No Shake Cam, 6000 mAh Battery<br><b>Price:</b> 19000</div>`)[0];
+                popup_99b2620fdb060349a5789d7ef2e948db.setContent(html_ed5a7bf770c29cd703bcb3228e7c41cc);
             
         
 
-        marker_0234e31c7db96d50c0cddb0c026b6ebc.bindPopup(popup_6270c36e11ba73a15174416879f74342)
+        marker_5a5ede0398606136aed712a157c642b0.bindPopup(popup_99b2620fdb060349a5789d7ef2e948db)
         ;
 
         
